src/test/ui/issues/issue-42944.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `B`
  --> $DIR/issue-42944.rs:9:9
   |
LL |         B(());
   |         ^ constructor is not visible here due to private fields

error[E0425]: cannot find function, tuple struct or tuple variant `B` in this scope
  --> $DIR/issue-42944.rs:16:9
   |
LL |         B(());
   |         ^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
LL |     use foo::B;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0425.
For more information about an error, try `rustc --explain E0423`.
